<resources>
    <string name="app_name">FirebasePractice</string>
    <string name="login">Login</string>
    <string name="quick_link">Quick Link</string>
    <string name="if_you_don_t_have_an_account_yet_click_here">If you don\'t have an account yet, click HERE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="log_out">Log Out</string>
    <string name="sammy_de_jesus">Sammy De Jesus</string>
    <string name="links_500">Links: 500</string>
    <string name="_2000_calories_burned_today">2000 Calories Burned Today</string>
    <string name="body_mass_index_20">Body Mass Index 20%</string>
    <string name="weight_180lb_height_5_9">Weight: 180lb, Height: 5\'9</string>
    <string name="fat_percentage_13">Fat Percentage 13%</string>
    <string name="go_to_profile">Go To Profile</string>
    <string name="bmi">BMI</string>
    <string name="_90">90%</string>
    <string name="fat_percentage">Fat Percentage</string>
    <string name="_0">0%</string>
    <string name="_0_lb">0 lb</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="_00">0</string>
    <string name="avg_calories_burned">Avg. Calories Burned</string>
    <string name="avg_calories_intake">Avg. Calories Intake</string>
    <string name="unknown">Unknown</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
</resources>