<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/quick_link"
        android:textSize="40sp"
        android:textColor="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_style"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_username"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="@drawable/round_edit_style"
        android:hint="@string/password"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/round_button_style"
        android:text="@string/sign_in"
        />

    <TextView
        android:id="@+id/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/emeraldGreen"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_you_don_t_have_an_account_yet_click_here"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:textColor="@color/buttonColor"
        android:focusable="true" />
    
</androidx.constraintlayout.widget.ConstraintLayout>