<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_person"
        app:civ_circle_background_color="@color/white"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/enter_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_style"
        android:hint="@string/full_name"
        android:paddingLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        />

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_style"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/enter_fullname"
        />

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_style"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/enter_email"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_style"
        android:hint="@string/confirm_password"
        android:paddingLeft="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/create_password"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"
        android:background="@drawable/round_button_style"
        android:text="@string/register"
        />

</androidx.constraintlayout.widget.ConstraintLayout>