<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:layout_marginTop="22dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                app:civ_border_width="1dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_person"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="center_vertical|center_horizontal"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                android:text="@string/sammy_de_jesus"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/first_row"
        app:layout_constraintTop_toBottomOf="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:elevation="10dp"
            app:cardElevation="2dp"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/bmi_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#5E5E5E"
                    android:textSize="18sp"
                    android:text="@string/bmi"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:textSize="30sp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/_0"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:elevation="10dp"
            android:layout_marginStart="18dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/fatp_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#5E5E5E"
                    android:textSize="18sp"
                    android:text="@string/fat_percentage"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:textSize="30sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/_0"/>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row"
        app:layout_constraintTop_toBottomOf="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:elevation="10dp"
            app:cardElevation="2dp"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/weight_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#5E5E5E"
                    android:textSize="18sp"
                    android:text="@string/weight"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:textSize="30sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/_0_lb"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:elevation="10dp"
            android:layout_marginStart="18dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/height_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#5E5E5E"
                    android:textSize="18sp"
                    android:text="@string/height"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:textSize="30sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/_00"/>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_row"
        app:layout_constraintTop_toBottomOf="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:elevation="10dp"
            app:cardElevation="2dp"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/calories_burned_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#5E5E5E"
                    android:textSize="18sp"
                    android:text="@string/avg_calories_burned"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:textSize="30sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="bottom"
                    android:text="@string/_00"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:elevation="10dp"
            android:layout_marginStart="18dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/calories_intake_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#5E5E5E"
                    android:textSize="18sp"
                    android:text="@string/avg_calories_intake"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:textSize="30sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/_00"/>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>